added env-based config